--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="frontend/public/vite.svg" />
+    <link rel="icon" type="image/png" href="frontend/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="frontend/manifest.json" />
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="frontend/src/main.jsx"></script>
+    <script type="module" src="frontend/src/main.tsx"></script>
   </body>
 </html>
