--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/src/assets/manifest.json" />
-    <title>Vite + React</title>
+    <title>MERN PET</title>
   </head>
   <body>
     <div id="root"></div>
